--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
+
 body {
     font-family: "Arial", sans-serif;
+    background-color: coral;
 }
 section {
     text-align: center;
@@ -19,4 +21,12 @@ section {
     cursor: pointer;
 line-height: 100px;
     font-size: 60px;
+    
+}
+
+.game--restart {
+    font-weight: 30px;
+    background-color: rgb(201, 233, 201);
+    color: blueviolet;
+    border-color: rgb(211, 218, 204);
 }
